Updated Stacks and Queues